add responsive ui for mobile users

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Etchk a Sketch</title>
 </head>
 <body ondragstart="return false;" ondrop="return false;">
-    <h1 id="title" class="center">Etch a Sketch</h1>
+    <h1 id="title">Etch a Sketch</h1>
     <div class="center bigGap">
         <div id="grid"></div>
         <div id="settings">
